--- a/front/src/index.css
+++ b/front/src/index.css
@@ -6,8 +6,10 @@
 body {
   margin: 0;
   padding: 0;
-  overflow-x: hidden !important;
 }
 .app {
   margin: auto;
+}
+.over-follow-hidden {
+  overflow: hidden;
 }
